Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20312

VBSnapshotTask uninitialised priority

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.1.2
    • 4.1.2, 4.5.1
    • couchbase-bucket
    • None
    • Untriaged
    • Yes

    Description

      A mistake in https://github.com/couchbase/ep-engine/commit/6403bc0e8bbd7e94bb03672f505d99ff68d56c36 means the priority value is not initialised.

      This was spotted by valgrind when merging this commit up to Watson, presumably valgrind is not ran on sherlock, or the code path is not tested.

      Issue is here, the base class priority field doesn't get initialised, yet it is read in the run function

      This issue means the task will run at HIGH or LOW, but not guaranteed at the requested priority.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jwalker Jim Walker
            jwalker Jim Walker
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                PagerDuty